Not able to scroll after resizing responsive design mode view
Categories
(Core :: Web Painting, defect, P3)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr68 | --- | unaffected |
| firefox71 | --- | wontfix |
| firefox72 | --- | verified |
| firefox73 | --- | verified |
People
(Reporter: shobson, Assigned: tnikkel)
References
(Blocks 2 open bugs, Regression)
Details
(Keywords: regression, Whiteboard: [rdm-reserve] [dt-q])
Attachments
(2 files)
|
1.85 MB,
video/mp4
|
Details | |
|
47 bytes,
text/x-phabricator-request
|
jcristau
:
approval-mozilla-beta+
|
Details | Review |
Comment 1•7 years ago
|
||
| Reporter | ||
Comment 2•7 years ago
|
||
Comment 3•7 years ago
|
||
Comment 4•7 years ago
|
||
Comment 5•7 years ago
|
||
This error could already be fixed. I reported something similar here:
https://bugzilla.mozilla.org/show_bug.cgi?id=1457603#c39
It was at the same time (~ 4 months ago). I reported a crash but before Firefox crashed it was no longer possible to scroll in RDM after resizing the RDM viewport. Since the crash was fixed, the scrolling problem has never appeared again for me. So it seems related.
Updated•7 years ago
|
Comment 6•6 years ago
|
||
I'm not able to reproduce this. Is this still failing for you? If so, would you please post a testcase that reliably demonstrates the problem?
Updated•6 years ago
|
| Reporter | ||
Comment 8•6 years ago
|
||
Sorry for the slow reply. I made a video of the problem happening for me on www.mozilla.org. It's hard to show in a video that I can't scroll but hopefully it will help you replicate the problem. I lose my scrool wheel at around 6.25s.
I'm now on macOS Mojave 10.14.5 (18F132) and Nightly 69.0a1 (2019-06-14)
Comment 9•6 years ago
|
||
It was fixed for me (see comment #5) but it happens again since a few days.
Comment 10•6 years ago
•
|
||
Hi,
I have managed to reproduce the issue on latest Nightly 69.0a1 (2019-06-24) (64-bit), using macOS Mojave 10.14, Windows 10 and Ubuntu 18.04.
This is a regression from 2019-06-04
First bad Build ID: 20190604034844
Pushlog: https://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=dfc513e7e1413158d8d0d6ccf029c4a0b6a0a2ca&tochange=d17dc040eec7635a7f91468831c7fb74a7924ef6
Comment 11•6 years ago
|
||
Hey guys, it seems this issue is related to Webrender somehow, with gfx.webrender.all set to true in about:config, the user is able to scroll through the viewport after resizing it, but as soon as you turn it off the scrolling function no longer works after the user resizes the window.
Please note that Composition in about:support should show Webrender instead of openGl or Basic.
Comment 12•6 years ago
|
||
Bugbug thinks this bug is a regression, but please revert this change in case of error.
Comment 14•6 years ago
|
||
Hey...just wanted to say that I still get this unwanted behaviour .
I am on Mac OS Mojave, Firefox dev edition build is 70.0b6 (64-bit). But this is happening for half a year, maybe even more.
One little workaround is to click outside the responsive frame and then when you enter the frame again, the scrolling will work. No need to click inside the frame, it will work without it.
After you resize the frame manually, click outside it and scroll will work.
It is not that hard to click once after each dimension change, but it can get annoying :)
Comment 16•6 years ago
|
||
Can reproduce on Nightly + macOS 10.14.6, with WebRender off. STR:
- Open a long web page, e.g. https://firefox-dev.tools/
- Enable RDM.
- Resize the viewport width by dragging the viewport's right edge.
- Hover the page content and try scrolling with the mouse wheel.
A workaround seems to be, after steps 3, to click the RDM's page background (outside of the viewport). After that, scrolling works as expected. Clicking in the page content can help too (but not systematically).
I wonder if the workarounds (switching to another tab, clicking the background) point to a focus and DOM event issue? Do we perhaps intercept scroll events in the content page to avoid scrolling the RDM page (which might be done in CSS only today with overscroll-behavior: contain)?
Comment 18•6 years ago
|
||
mozregression identified Bug 1413546 as the source of the regression. Miko, would you please consider how retained display lists my cause this issue?
| Assignee | ||
Comment 19•6 years ago
|
||
Confirmed that is regression ranges down to the single commit enabling parent rdl, and flipping the parent rdl pref fixes/breaks it.
| Assignee | ||
Updated•6 years ago
|
Comment 20•6 years ago
•
|
||
(In reply to Brad Werth [:bradwerth] from comment #18)
mozregression identified Bug 1413546 as the source of the regression. Miko, would you please consider how retained display lists my cause this issue?
I can think of three possible reasons:
- Lack of frame invalidation after resizing
- Invalid hit test information (bug 1534549)
- APZ problem
I looked into this briefly and after trying a workaround for 2), I think the cause is 1) or 3).
This might also be a FrameLayerBuilder bug, since I only managed to reproduce this with WebRender disabled.
Comment 21•6 years ago
|
||
I did some testing in Firefox 71 (Beta) and 72 (Nightly).
If I middle-click in the RDM viewport to initiate auto-scroll when after a resize scrolling with the wheel stops working and then cancel auto-scroll via ESC then scrolling with the mouse wheel starts working again and it keeps working when I resize the window.
If I leave the tab and return to this tab then it immediately starts happening again when I resize the RDM viewport and can't scroll with the mouse wheel until I enter and leave auto-scroll again.
Comment 22•6 years ago
|
||
(In reply to Miko Mynttinen [:miko] from comment #20)
I can think of three possible reasons:
- Lack of frame invalidation after resizing
- Invalid hit test information (bug 1534549)
- APZ problem
I looked into this briefly and after trying a workaround for 2), I think the cause is 1) or 3).
This might also be a FrameLayerBuilder bug, since I only managed to reproduce this with WebRender disabled.
Are you willing to take the bug and re-characterize it as a graphics issue?
| Assignee | ||
Comment 23•6 years ago
|
||
I noticed that the ref layer for the child process had "force-ehr" on it sometimes, which happens when it is tagged with EventRegionsOverride::ForceEmptyHitRegion. Commenting out this line
fixes the bug for me. So my current guess is that responsive design mode toggles pointer events none on something and we don't invalidate so it wrongly stays pointer events none in the layer tree.
| Assignee | ||
Updated•6 years ago
|
| Assignee | ||
Comment 24•6 years ago
|
||
(In reply to Timothy Nikkel (:tnikkel) from comment #23)
So my current guess is that responsive design mode toggles pointer events none on something and we don't invalidate so it wrongly stays pointer events none in the layer tree.
This guess seems to be correct. Patch coming up.
| Assignee | ||
Comment 25•6 years ago
|
||
Updated•6 years ago
|
Comment 26•6 years ago
|
||
For info, there is a pointer-events:none in RDM defined here: https://searchfox.org/mozilla-central/rev/04d8e7629354bab9e6a285183e763410860c5006/devtools/client/responsive/index.css#319-321
Comment 27•6 years ago
|
||
Updated•6 years ago
|
Updated•6 years ago
|
Updated•6 years ago
|
Comment 28•6 years ago
|
||
Hi,
I tested this issue and it still occurs in 71, 72 and 73, I'll update the flags.
Comment 29•6 years ago
|
||
| bugherder | ||
Comment 30•6 years ago
|
||
Verified - fixed on latest Nightly 73.0a1 (2019-12-04) (Build id: 20191204215924) on Mac OS 10.14 , Windows 10 and Ubuntu 18.04
| Assignee | ||
Comment 32•6 years ago
|
||
Comment on attachment 9113117 [details]
Bug 1490571. Pointer events changes need to schedule a paint because they can change the event regions override on layers. r?mattwoodrow
Beta/Release Uplift Approval Request
- User impact if declined: responsive design mode can't scroll after resizing
- Is this code covered by automated tests?: No
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): just triggers a paint on pointer events changes
- String changes made/needed:
Comment 33•6 years ago
|
||
Comment on attachment 9113117 [details]
Bug 1490571. Pointer events changes need to schedule a paint because they can change the event regions override on layers. r?mattwoodrow
looks like a simple fix, verified on nightly, approved for 72.0b3
Comment 34•6 years ago
|
||
| bugherder uplift | ||
Comment 35•6 years ago
|
||
Verified - fixed on latest Beta 72.0b3 (Build id: 20191205201734) on Mac OS 10.14 , Windows 10 and Ubuntu 18.04
Comment 36•6 years ago
|
||
P3 and 72 is in 3 weeks, wontfix 71.
Updated•6 years ago
|
Updated•4 years ago
|
Description
•