Bug 1490571. Pointer events changes need to schedule a paint because they can change the event regions override on layers. r=mattwoodrow a=jcristau

Differential Revision: https://phabricator.services.mozilla.com/D55603